force-app/main/default/objects/Master_Dipcad_Code__c/fields/Deskripsi__c.field-meta.xml
<CustomField>
    <fullName>Deskripsi__c</fullName>
    <label>Deskripsi</label>
    <type>TextArea</type>
</CustomField>