force-app/main/default/objects/Master_Dipcad_Code__c/fields/Form_Utama__c.field-meta.xml
<CustomField>
    <fullName>Form_Utama__c</fullName>
    <label>Form Utama</label>
    <length>255</length>
    <type>Text</type>
</CustomField>