force-app/main/default/objects/Master_Dipcad_Code__c/fields/Is_E_Form__c.field-meta.xml
<CustomField>
    <fullName>Is_E_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Form</label>
    <type>Checkbox</type>
</CustomField>