force-app/main/default/objects/Master_Dipcad_Code__c/fields/Kind_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Kind_of_Transaction__c</fullName>
    <description>Kind Of Transaction</description>
    <label>Kind of Transaction</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>